--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 
     <div class="container">
         <h1>🪄 Vrajă Random</h1>
-        <button id="generateSpell">Generează vrajă</button>
 
-        <div id="spellCard" class="card">
-            <h2 id="spellName">---</h2>
-            <p id="spellDescription">Apasă butonul pentru a genera o vrajă.</p>
+        <button id="generateSpellBtn">Generează vrajă</button>
+
+        <div id="spellCard" class="hidden">
+            <h2 id="spellName"></h2>
+            <p id="spellDescription"></p>
         </div>
+
+        <div id="errorAlert" class="error hidden"></div>
     </div>
 
     <script src="script.js"></script>
