--- a/index.html
+++ b/index.html
@@ -2,24 +2,32 @@
 <html lang="ro">
 <head>
     <meta charset="UTF-8">
-    <title>Vrajă Random</title>
+    <title>Generator de Vraji</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS extern (îl vom crea separat) -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="container">
-        <h1>🪄 Vrajă Random</h1>
+        <h1>🪄 Generator de Vraji</h1>
 
-        <button id="generateSpellBtn">Generează vrajă</button>
+        <button id="generateSpellBtn">
+            Generează o vrajă random
+        </button>
 
-        <div id="spellCard" class="hidden">
-            <h2 id="spellName"></h2>
-            <p id="spellDescription"></p>
+        <div id="spellCard" class="spell-card hidden">
+            <h2 id="spellName">Nume Vrajă</h2>
+            <p id="spellEffect">Efectul vrajii va apărea aici.</p>
         </div>
 
-        <div id="errorAlert" class="error hidden"></div>
+        <div id="errorBox" class="error hidden">
+            A apărut o eroare la încărcarea vrajii.
+        </div>
     </div>
 
+    <!-- JavaScript extern (îl vom crea separat) -->
     <script src="script.js"></script>
 </body>
 </html>
