--- a/index.html
+++ b/index.html
@@ -4,30 +4,51 @@
     <meta charset="UTF-8">
     <title>Generator de Vraji</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- CSS extern (îl vom crea separat) -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div class="container">
         <h1>🪄 Generator de Vraji</h1>
 
-        <button id="generateSpellBtn">
-            Generează o vrajă random
-        </button>
+        <!-- Buton interactiv -->
+        <button id="generateSpellBtn">Generează o vrajă random</button>
 
+        <!-- Card vrajă -->
         <div id="spellCard" class="spell-card hidden">
+            <!-- Textual: titlu + efect -->
             <h2 id="spellName">Nume Vrajă</h2>
             <p id="spellEffect">Efectul vrajii va apărea aici.</p>
+
+            <!-- Media / vizual: badge / icon -->
+            <div id="spellIcon" class="badge">✨</div>
+
+            <!-- Tabel metadate -->
+            <table id="spellMeta">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Status</th>
+                        <th>Specie</th>
+                        <th>Locație</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
 
+        <!-- Mesaj de eroare -->
         <div id="errorBox" class="error hidden">
             A apărut o eroare la încărcarea vrajii.
         </div>
     </div>
 
-    <!-- JavaScript extern (îl vom crea separat) -->
     <script src="script.js"></script>
 </body>
 </html>
